Design as of 24/02/2022
Mobile design as of the 24th February 2022 (to be continued)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <!-- Navbar Stuffs -->
+    <header>
+        <div class="navbar">
+            <img src="assets\Logo_Advantage.png" alt="" class="advantage_logo">
+
+            <p class="advantage_text">Advantage</p>
+
+            <img src="assets\White_menu_icon.svg" alt="" class="menu_icon">
+        </div>
+    </header>
+
+    <main>
+        <!-- Landing page stuffs -->
+        <div class="blob-with-text">
+            <img src="assets\Blob.png" alt="" class="blob_img">
+
+            <h1 class="blob_text">One for all <br> All in one. </h1>
+        </div>
+
+        <div class="main-card">
+            <img src="assets\Main_card.png" alt="" class="main_card_img">
+        </div>
+
+        <div class="arrow-container">
+            <img src="assets\Down_arrow.svg" alt="" class="down_arrow">
+        </div>
+    </main>
 </body>
 </html>
