--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 
     <main>
         <!-- Landing page stuffs -->
-        <div class="blob-with-text">
-            <img src="assets\Blob.png" alt="" class="blob_img">
+        <div class="top_text-container">
+            <h1 class="top_text">One for all <br> All in one. </h1>
 
-            <h1 class="blob_text">One for all <br> All in one. </h1>
+            <div class="main_card">
+                <img src="assets\Main_card.png" alt="" class="main_card_img">
+            </div>
         </div>
 
         <!--
@@ -36,9 +38,6 @@
             Main Card
             ========
         -->
-        <div class="main_card">
-            <img src="assets\Main_card.png" alt="" class="main_card_img">
-        </div>
 
         <div class="arrow-container">
             <img src="assets\Down_arrow.svg" alt="" class="down_arrow">
@@ -62,18 +61,22 @@
         
 
         <div class="funnel_container">
-            <img src="assets\Funnel.svg" alt="">
+            <img src="assets\Funnel.svg" alt="" class="funnel">
         </div>
 
         <div class="card_bottom-container">
-            <img src="assets\Card_at_bottom.png" alt="">
+            <img src="assets\Card_at_bottom.png" alt="" class="card_bottom">
         </div>
 
         <div class="advantage_desc-container">
             <p class="advantage_desc">Advantage takes each one of your cards and puts them into one. Making your life easier.</p>
         </div>
-    </div>
-</div>
-</main>
+    </main>
+
+    <footer class="footer-container">
+        <div class="footer_stuff">
+            <p class="footer_text">Made and designed with <i class='bx bxs-heart' style='color:#ef6262' ></i> by kjdotio</p>
+        </div>
+    </footer>
 </body>
 </html>
